Fix input padding alignment

--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -25,6 +25,7 @@
     border: 0 solid transparent;
     border-bottom: $input-border-thickness solid $colors--theme--border-high-contrast;
     border-radius: 0;
+    border-top: $input-border-thickness solid transparent;
     color: $colors--theme--text-default;
     font-family: unquote($font-base-family);
     font-size: 1rem;
